updated homepage with various sections

--- a/index.html
+++ b/index.html
@@ -1,21 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jessica Asamoah</title>
-    <link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
-    <nav class="nav-brand">
-        <h1>Jessica Asamoah</h1>
-        <ul class="nav-pages">
-            <li class="nav-item">Home</li>
-            <li class="nav-item">About</li>
-            <li class="nav-item">Projects</li>
-            <li class="nav-item">Services</li>
-            <li class="nav-item"><button>Contact</button></li>
-        </ul>
+    <script
+      src="https://kit.fontawesome.com/50bce7f236.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav class="nav-bar">
+      <h1>Jessica Asamoah</h1>
+      <ul class="nav-pages">
+        <li class="nav-item"><a href="">About</a></li>
+        <li class="nav-item"><a href="#projects">Projects</a></li>
+        <li class="nav-item"><a href="#contact">Contact</a></li>
+        <li class="nav-item">
+          <a
+            href="https://www.linkedin.com/in/jessica-awuradjoa-asamoah/"
+            target="_blank"
+            ><span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+            <span class="sr-only">LinkedIn</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="https://github.com/Jessica-Asamoah"
+            ><span class="fa-brands fa-github" aria-hidden="true"></span
+            ><span class="sr-only">Github</span></a
+          >
+        </li>
+        <li class="nav-item"><button class="resume-button">Resume</button></li>
+      </ul>
     </nav>
-</body>
+    <section class="hero-section padding-global">
+      <div class="jess-info">
+        <p class="name">Hello, I am <span>Jessica Asamoah</span></p>
+        <h2>
+          A results-driven software engineer passionate about building efficient
+          and scalable solutions.
+        </h2>
+      </div>
+    </section>
+    <div class="gradient"></div>
+    <!-- <section class="alt-color padding-global">
+      <div class="about">
+        <h2>ABOUT</h2>
+        <p>
+          A results-driven software engineer passionate about building efficient
+          and scalable solutions. Highly organized and dependable, with
+          expertise in HTML, CSS, JavaScript, React, and Python. Recognized for
+          strong leadership, a solid work ethic, and exceptional problem-solving
+          abilities. Committed to continuous learning and making a meaningful
+          impact through technology.
+        </p>
+      </div>
+    </section> -->
+    <section class="technologies padding-global">
+      <h3>Technologies in My Toolkit</h3>
+      <ul class="technologies-list">
+        <li>
+          <img
+            src="./images/check-mark-svgrepo-com.svg"
+            width="25px"
+            height="25px"
+            alt=""
+          />
+        </li>
+        <li>HTML</li>
+        <li>
+          <img
+            src="./images/check-mark-svgrepo-com.svg"
+            width="25px"
+            height="25px"
+            alt=""
+          />
+        </li>
+        <li>CSS</li>
+        <li>
+          <img
+            src="./images/check-mark-svgrepo-com.svg"
+            width="25px"
+            height="25px"
+            alt=""
+          />
+        </li>
+        <li>JAVASCRIPT</li>
+        <li>
+          <img
+            src="./images/check-mark-svgrepo-com.svg"
+            width="25px"
+            height="25px"
+            alt=""
+          />
+        </li>
+        <li>REACT.JS</li>
+      </ul>
+    </section>
+    <div class="gradient"></div>
+    <section id="projects" class="padding-global">
+      <h2>PROJECTS</h2>
+      <div class="project-block">
+        <div>
+          <h3>PROJECT 1</h3>
+          <h4>NSROMMA CRICKET ACADEMY</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+            adipisci totam tempore autem. Laborum iusto fugit, quidem suscipit
+            fugiat atque eveniet vero, doloribus provident vitae deleniti quo
+            architecto eaque optio?
+          </p>
+        </div>
+        <div class="image-wrapper">
+          <img src="./images/nsromma.png" alt="" class="project-image" />
+        </div>
+      </div>
+      <div class="project-block">
+        <div>
+          <h3>PROJECT 2</h3>
+          <h4>CITY GOSPEL APPLICATION</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+            adipisci totam tempore autem. Laborum iusto fugit, quidem suscipit
+            fugiat atque eveniet vero, doloribus provident vitae deleniti quo
+            architecto eaque optio?
+          </p>
+        </div>
+        <div class="image-wrapper">
+          <img src="./images/nsromma.png" alt="" class="project-image" />
+        </div>
+      </div>
+      <div class="project-block">
+        <div>
+          <h3>PROJECT 3</h3>
+          <h4>BROKEN FOR USE</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+            adipisci totam tempore autem. Laborum iusto fugit, quidem suscipit
+            fugiat atque eveniet vero, doloribus provident vitae deleniti quo
+            architecto eaque optio?
+          </p>
+        </div>
+        <div class="image-wrapper">
+          <img src="./images/nsromma.png" alt="" class="project-image" />
+        </div>
+      </div>
+    </section>
+    <div class="gradient"></div>
+    <section id="contact" class="alt-color padding-global">
+      <div class="contact-block">
+        <h2>Contact Me</h2>
+        <p>
+          Have a project in mind or just want to say hello? I'm always open to
+          new opportunities and collaborations. Feel free to reach out—I'd love
+          to hear from you!
+        </p>
+        <button class="resume-button">Email Me</button>
+      </div>
+    </section>
+    <div class="gradient"></div>
+    <footer class="padding-global">
+      <h2>Jessica Asamoah · Software Engineer</h2>
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a
+            href="https://www.linkedin.com/in/jessica-awuradjoa-asamoah/"
+            target="_blank"
+            ><span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+            <span class="sr-only">LinkedIn</span></a
+          >
+        </li>
+        <li class="footer-item">
+          <a href="https://github.com/Jessica-Asamoah"
+            ><span class="fa-brands fa-github" aria-hidden="true"></span
+            ><span class="sr-only">Github</span></a
+          >
+        </li>
+        <li class="footer-item">
+          <a href="mailto:jessicaasamoah903@gmail.com"
+            ><span class="fa-solid fa-envelope"></span
+            ><span class="sr-only">Email</span></a
+          >
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
