Styling changes to the homepage

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="technologies padding-global">
       <h3>Technologies in My Toolkit</h3>
       <ul class="technologies-list">
-        <li>
+        <li class="check">
           <img
             src="./images/check-mark-svgrepo-com.svg"
             width="25px"
@@ -76,7 +76,7 @@
           />
         </li>
         <li>HTML</li>
-        <li>
+        <li class="check">
           <img
             src="./images/check-mark-svgrepo-com.svg"
             width="25px"
@@ -85,7 +85,7 @@
           />
         </li>
         <li>CSS</li>
-        <li>
+        <li class="check">
           <img
             src="./images/check-mark-svgrepo-com.svg"
             width="25px"
@@ -94,7 +94,7 @@
           />
         </li>
         <li>JAVASCRIPT</li>
-        <li>
+        <li class="check">
           <img
             src="./images/check-mark-svgrepo-com.svg"
             width="25px"
@@ -105,11 +105,11 @@
         <li>REACT.JS</li>
       </ul>
     </section>
-    <div class="gradient"></div>
+    <!-- <div class="gradient"></div> -->
     <section id="projects" class="padding-global">
       <h2>PROJECTS</h2>
       <div class="project-block">
-        <div>
+        <div class="text">
           <h3>PROJECT 1</h3>
           <h4>NSROMMA CRICKET ACADEMY</h4>
           <p>
@@ -123,8 +123,11 @@
           <img src="./images/nsromma.png" alt="" class="project-image" />
         </div>
       </div>
-      <div class="project-block">
-        <div>
+      <div class="project-block reverse">
+        <div class="image-wrapper">
+          <img src="./images/nsromma.png" alt="" class="project-image" />
+        </div>
+        <div class="text">
           <h3>PROJECT 2</h3>
           <h4>CITY GOSPEL APPLICATION</h4>
           <p>
@@ -134,12 +137,9 @@
             architecto eaque optio?
           </p>
         </div>
-        <div class="image-wrapper">
-          <img src="./images/nsromma.png" alt="" class="project-image" />
-        </div>
       </div>
       <div class="project-block">
-        <div>
+        <div class="text">
           <h3>PROJECT 3</h3>
           <h4>BROKEN FOR USE</h4>
           <p>
@@ -154,7 +154,7 @@
         </div>
       </div>
     </section>
-    <div class="gradient"></div>
+    <!-- <div class="gradient"></div> -->
     <section id="contact" class="alt-color padding-global">
       <div class="contact-block">
         <h2>Contact Me</h2>
@@ -191,6 +191,7 @@
           >
         </li>
       </ul>
+      <p><small>© 2025 Jessica Asamoah. All rights reserved.</small></p>
     </footer>
   </body>
 </html>
