--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="nav-bar">
       <h1>Jessica Asamoah</h1>
       <ul class="nav-pages">
-        <li class="nav-item"><a href="">About</a></li>
+        <li class="nav-item"><a href="/about.html">About</a></li>
         <li class="nav-item"><a href="#projects">Projects</a></li>
         <li class="nav-item"><a href="#contact">Contact</a></li>
         <li class="nav-item">
