fixed image wrapper

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </nav>
     <section class="hero-section padding-global">
       <div class="about">
-        <div class="image-wrapper">
+        <div class="image-wrapper-about">
           <img
             src="./images/EMPOER HER 12.jpg"
             width="500px"
