--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <h1>Jessica Asamoah</h1>
+      <h1><a href="/index.html">Jessica Asamoah</a></h1>
       <ul class="nav-pages">
         <li class="nav-item"><a href="/about.html">About</a></li>
         <li class="nav-item"><a href="#projects">Projects</a></li>
