added menu toggle

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   <body>
     <nav class="nav-bar">
       <h1><a href="/index.html">Jessica Asamoah</a></h1>
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <ul class="nav-pages">
         <li class="nav-item"><a href="/about.html">About</a></li>
         <li class="nav-item"><a href="#projects">Projects</a></li>
