--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <nav class="nav-bar">
       <h1><a href="/index.html">Jessica Asamoah</a></h1>
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <ul class="nav-pages">
         <li class="nav-item"><a href="/about.html">About</a></li>
         <li class="nav-item"><a href="#projects">Projects</a></li>
@@ -123,7 +124,7 @@
           <img src="./images/nsromma.png" alt="" class="project-image" />
         </div>
       </div>
-      <div class="project-block reverse">
+      <div class="project-block-reverse">
         <div class="image-wrapper">
           <img src="./images/nsromma.png" alt="" class="project-image" />
         </div>
@@ -193,5 +194,6 @@
       </ul>
       <p><small>© 2025 Jessica Asamoah. All rights reserved.</small></p>
     </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
